[tool.poetry]
name = "hw9"
version = "0.1.0"
description = ""
authors = ["OleksandrZahar0vi4 <zaharovich007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"
itemadapter = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
